Improved web font loading on all sites

--- a/caffe.topmonks.cz/src/html/layouts/topmonks.html
+++ b/caffe.topmonks.cz/src/html/layouts/topmonks.html
@@ -14,10 +14,7 @@
   <link rel="preconnect" href="https://ajax.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
-  <!-- Custom Fonts -->
-  <script>WebFontConfig={google:{families:["Lato:400,700,900:latin-ext"]}, async:true}</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM" crossorigin="anonymous"></script>
-
+  <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
   <link rel="stylesheet" href="/stylesheets/typography.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
 
