--- a/shared/src/common/typography.scss
+++ b/shared/src/common/typography.scss
@@ -13,19 +13,14 @@
   --tm-black-title: #3c3c3b;
 }
 
-/*
-http://pxtoem.com/ - how to count px to em
-*/
-
 body {
   color: var(--tm-black);
   margin: 0;
   padding: 0;
-  font-size: 16px;
   letter-spacing: 0;
-  line-height: 1.444em; //22/26px
-  font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica,
-  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 16px/1.5 Lato, lato, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
   font-variant-ligatures: common-ligatures contextual;
@@ -37,18 +32,10 @@ body {
   text-rendering: geometricPrecision;
 }
 
-.wf-active body {
-  font-family: Lato, sans-serif;
-}
-
 .tm-logo {
-  font-family: Futura, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
-  Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-  "Segoe UI Symbol";
-}
-
-.wf-active .tm-logo {
-  font-family: futura-pt, sans-serif;
+  font-family: Futura, futura-pt, -apple-system, BlinkMacSystemFont, Roboto,
+    "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 h1,
@@ -111,25 +98,20 @@ ul.formatted {
   }
 }
 
-///* MD GRID DESKTOP BREAKPOINT*/
-//@media (min-width: 840px) {
-//}
-
-/* MD GRID TABLET AND ABOVE BREAKPOINT */
 @media (min-width: 480px) {
   body {
-    font-size: 1.125em; //18px
+    font-size: 1.125em;
   }
   h1,
   h2 {
-    font-size: 2.111em; //38px
-    line-height: 1.447em; //55px
+    font-size: 2.111em;
+    line-height: 1.447em;
   }
   h3 {
-    font-size: 1.333em; //24px
+    font-size: 1.333em;
   }
   h4 {
-    font-size: 20px; //20px
+    font-size: 20px;
   }
 }
 
@@ -151,4 +133,3 @@ strong abbr {
 .tm-text--margin-top {
   margin-top: 1em;
 }
-
