--- a/studio.topmonks.com/src/stylesheets/typography.scss
+++ b/studio.topmonks.com/src/stylesheets/typography.scss
@@ -2,10 +2,8 @@ body {
   color: #000;
   margin: 0;
   padding: 0;
-  font-size: 18px;
   letter-spacing: 0;
-  line-height: 1.555em;
-  font-family: Lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
+  font-family: 18px/1.5555556 Lato, lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
   font-kerning: normal;
@@ -28,18 +26,10 @@ ul li {
   margin: 0;
 }
 
-.wf-active body {
-  font-family: Lato, sans-serif;
-}
-
 .tm-logo {
-  font-family: Futura, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
-}
-
-.wf-active .tm-logo {
-  font-family: futura-pt, sans-serif;
+  font-family: Futura, futura-pt, -apple-system, BlinkMacSystemFont, Roboto,
+    "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 input,
@@ -48,7 +38,7 @@ textarea {
 }
 
 textarea {
-  font-family: Lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
+  font-family: Lato, lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
 }
