--- a/www.topmonks.cz/src/html/layouts/topmonks.html
+++ b/www.topmonks.cz/src/html/layouts/topmonks.html
@@ -15,8 +15,7 @@
   <link rel="preconnect" href="//cdn.jsdelivr.net">
   <link rel="preconnect" href="//www.google-analytics.com">
   <link rel="preconnect" href="//static.hotjar.com">
-  <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" as="script" crossorigin>
-  <link rel="preload" href="https://use.typekit.net/her1ktw.js" as="script">
+  <link rel="preload" href="https://use.typekit.net/her1ktw.css" as="style">
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986" as="script">
 
   <!--[if lt IE 9]>
@@ -24,11 +23,7 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <script>WebFontConfig = { typekit: {id: 'her1ktw'}, async: true }</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer
-          integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
-          crossorigin="anonymous"></script>
-
+  <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
   <link rel="stylesheet" href="/stylesheets/typography.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
 
