Cache static assets

--- a/studio.topmonks.com/src/stylesheets/typography.scss
+++ b/studio.topmonks.com/src/stylesheets/typography.scss
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   letter-spacing: 0;
-  font-family: 18px/1.5555556 Lato, lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
+  font: 18px/1.5555556 Lato, lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
   font-kerning: normal;
