--- a/www.topmonks.cz/src/html/layouts/topmonks.html
+++ b/www.topmonks.cz/src/html/layouts/topmonks.html
@@ -2,11 +2,11 @@
 <html lang="cs" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# business: http://ogp.me/ns/business#">
 <head>
   <meta charset="utf-8">
+  <title>{% block title %}{{ language[page].title }}{% endblock %}</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
-  <title>{% block title %}{{ language[page].title }}{% endblock %}</title>
 
   <link rel="preconnect" href="https://ajax.googleapis.com">
   <link rel="preconnect" href="//res.cloudinary.com">
@@ -15,8 +15,8 @@
   <link rel="preconnect" href="//cdn.jsdelivr.net">
   <link rel="preconnect" href="//www.google-analytics.com">
   <link rel="preconnect" href="//static.hotjar.com">
-  <link rel="preload" href="https://use.typekit.net/her1ktw.css" as="style">
-  <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986" as="script">
+  <link rel="preload" as="style" href="https://use.typekit.net/her1ktw.css">
+  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986">
 
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -24,8 +24,8 @@
   <![endif]-->
 
   <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
-  <link rel="stylesheet" href="/stylesheets/typography.css">
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/assets/css/typography.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 
   {% block head %}{% endblock %}
   {% include "shared/app-icons.html" %}
