Module syntax for Sass

--- a/monkslab.cz/src/stylesheets/main.scss
+++ b/monkslab.cz/src/stylesheets/main.scss
@@ -1,5 +1,5 @@
 @import "neueeinstellung";
-@import "@material/layout-grid/mdc-layout-grid";
+@import "~@material/layout-grid/mdc-layout-grid";
 @import "common/colors";
 
 :root {
