--- a/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
+++ b/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
@@ -1,4 +1,4 @@
-@import "@material/layout-grid/mdc-layout-grid";
+@import "~@material/layout-grid/mdc-layout-grid";
 
 :root {
   --primary-color: #3324ae;
