--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -1,4 +1,4 @@
-@import "~@material/layout-grid/mdc-layout-grid";
+@import "@material/layout-grid/mdc-layout-grid";
 
 :root {
   --topmonks-caffe-orange: #f06b4f;
