--- a/shared/src/common/main.scss
+++ b/shared/src/common/main.scss
@@ -1,4 +1,4 @@
-@import "~@material/layout-grid/mdc-layout-grid";
+@import "@material/layout-grid/mdc-layout-grid";
 
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
