--- a/studio.topmonks.com/src/stylesheets/main.scss
+++ b/studio.topmonks.com/src/stylesheets/main.scss
@@ -1,4 +1,4 @@
-@import "~@material/layout-grid/mdc-layout-grid";
+@import "@material/layout-grid/mdc-layout-grid";
 
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
