[www.topmonks.com] WIP

--- a/www.topmonks.com/src/html/about-us/index.njk
+++ b/www.topmonks.com/src/html/about-us/index.njk
@@ -1,6 +1,6 @@
-{% extends 'layouts/topmonks.html' %}
-{%- import 'macros/helpers.html' as macros -%}
-{% block title %} About Us - TopMonks{% endblock %}
+{% extends 'layouts/topmonks.njk' %}
+{%- import 'macros/helpers.njk' as macros -%}
+{% block title %} About TopMonks{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/assets/css/about-us.css">
 {% endblock %}
