--- a/www.topmonks.com/src/html/case-studies/adler/index.njk
+++ b/www.topmonks.com/src/html/case-studies/adler/index.njk
@@ -1,6 +1,6 @@
-{% extends 'layouts/topmonks.html' %}
+{% extends 'layouts/topmonks.njk' %}
 {% set page = '_case-studies__adler' %}
-{% block title %} Adler - Case Studies - TopMonks{% endblock %}
+{% block title %}TopMonks Case Study - Adler{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/assets/css/case-studies-common.css">
 <style>
@@ -264,6 +264,6 @@
 
 {% set caseStudiesData = { title : 'Other Case Studies', activeCase : 'adler' } %}
 
-{% include 'components/case-studies/index.html' %}
+{% include 'components/case-studies/index.njk' %}
 
 {% endblock %}
