--- a/www.topmonks.com/src/html/case-studies/profi-option/index.njk
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.njk
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TopMonks Case Study - Profi Option</title>
   <link rel="preconnect" href="//res.cloudinary.com">
-  <script>WebFontConfig = { typekit: {id: 'her1ktw'}, async: true }</script>
-  <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer crossorigin="anonymous"></script>
+  <link rel="preload" as="style" href="https://use.typekit.net/her1ktw.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
   <link rel="stylesheet" href="/assets/css/profi-option.css">
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
@@ -532,7 +532,6 @@
     </div>
   </div>
 </section>
-
 
 <footer id="social" class="social">
   <div class="nav-and-contacts">
