--- a/www.topmonks.com/src/html/components/case-studies/index.njk
+++ b/www.topmonks.com/src/html/components/case-studies/index.njk
@@ -1,4 +1,4 @@
-{%- import 'macros/helpers.html' as macros -%}
+{%- import 'macros/helpers.njk' as macros -%}
 {{ macros.css('case-studies') }}
 {% set gridSpan = 6 if caseStudiesData.activeCase else 4 %}
 
