--- a/www.topmonks.com/src/html/contact/index.njk
+++ b/www.topmonks.com/src/html/contact/index.njk
@@ -1,5 +1,5 @@
-{% extends 'layouts/topmonks.html' %}
-{% from 'macros/helpers.html' import avatar %}
+{% extends 'layouts/topmonks.njk' %}
+{% from 'macros/helpers.njk' import avatar %}
 {% set page = 'topmonks-contact' %}
 {% block title %}TopMonks Contacts{% endblock %}
 
