--- a/www.topmonks.com/src/html/meet-us/index.njk
+++ b/www.topmonks.com/src/html/meet-us/index.njk
@@ -1,5 +1,5 @@
-{% extends 'layouts/topmonks.html' %}
-{% block title %}Meet Us - TopMonks{% endblock %}
+{% extends 'layouts/topmonks.njk' %}
+{% block title %}Meet TopMonks{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/assets/css/meet-us.css">
 {% endblock %}
