--- a/www.topmonks.com/src/html/case-studies/xixoio/index.njk
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.njk
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Xixoio</title>
+  <title>TopMonks Case Study - Xixoio</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="TopMonks Case Study - XIXOIO">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/xixoio.css">
-  
+
 </head>
 <body>
 <header class="tm-app-bar">
