--- a/www.topmonks.com/src/html/index.njk
+++ b/www.topmonks.com/src/html/index.njk
@@ -1,6 +1,6 @@
-{% extends 'layouts/topmonks.html' %}
-{% from 'macros/helpers.html' import sprite %}
-{% from 'macros/helpers.html' import avatar %}
+{% extends 'layouts/topmonks.njk' %}
+{% from 'macros/helpers.njk' import sprite %}
+{% from 'macros/helpers.njk' import avatar %}
 
 {% set page = 'topmonks-index' %}
 {% set language = en %}
@@ -475,7 +475,7 @@ TopMonks - Software development partner for your business
 </section>
 
 {% set caseStudiesData = { title : 'Case Studies', subTitle : 'We have learned something from every collaboration with our clients.'} %}
-{% include 'components/case-studies/index.html' %}
+{% include 'components/case-studies/index.njk' %}
 
 <link rel="stylesheet" href="/assets/css/hp/testimonials.css">
 <section class="testimonials">
