--- a/www.topmonks.com/src/html/jobs/index.njk
+++ b/www.topmonks.com/src/html/jobs/index.njk
@@ -1,10 +1,10 @@
-{% extends 'layouts/topmonks.html' %}
-{% from 'macros/helpers.html' import avatar %}
+{% extends 'layouts/topmonks.njk' %}
+{% from 'macros/helpers.njk' import avatar %}
 {% set page = 'topmonks-jobs' %}
-{% block title %}TopMonks Opened Job Positions{% endblock %}
+{% block title %}Opened Job Positions in TopMonks{% endblock %}
 {% block preload %}
 <link rel="modulepreload" href="https://unpkg.com/lit-html@1.1.0/lit-html.js?module">
-<link rel="preload" as="fetch" href="https://hire.withgoogle.com/v2/api/t/topmonkscom/public/jobs" crossorigin="anonymous">
+<link rel="preload" as="fetch" href="https://hire.withgoogle.com/v2/api/t/topmonkscom/public/jobs" crossorigin>
 {% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/assets/css/jobs.css">
